<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uyeActivity"
    android:background="@drawable/gradient_2">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/heliotelsekayitol"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:background="#FFF8E7"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:background="#FFF8E7"
        android:hint="@string/şifre"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:background="#FFF8E7"
        android:hint="@string/şifre_tekrar"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:background="#FFF8E7"
        android:hint="@string/isim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />

    <EditText
        android:id="@+id/editTextSurname"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:background="#FFF8E7"
        android:hint="@string/soyisim"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />


    <EditText
        android:id="@+id/editTextBirthYear"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginTop="25dp"
        android:background="#FFF8E7"
        android:hint="@string/DoğumYılı"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextSurname" />

    <Button
        android:id="@+id/buttonUye"
        android:layout_width="138dp"
        android:layout_height="54dp"
        android:layout_marginTop="35dp"
        android:text="@string/KayıtOll"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBirthYear" />

</androidx.constraintlayout.widget.ConstraintLayout>
